<resources>
    <string name="app_name">Lêflix</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="recuperarSenha">Recuperar Senha</string>
    <string name="voltar">Voltar</string>
    <string name="doLogin">Faça login para continuar</string>
    <string name="cadastrese">Cadastre-se</string>
    <string name="jaecadastrado">Já é cadastrado? clique aqui</string>


    <!-- Tela Cadastro -->
    <string name="preenchaSenha">É obrigatório informar a senha!</string>
    <string name="preenchaEmail">É obrigatório informar o email!</string>
    <string name="preenchaNome">É obrigatório informar o nome!</string>

    <string name="senhaFraca">Informe uma senha mais forte!</string>
    <string name="emailInvalido">Informe um email válido!</string>
    <string name="emailDuplicado">Email informado já está em uso no sistema!</string>
    <string name="erroCadastrousuario">Erro ao cadastrar usuário: </string>
    <string name="title_activity_home">Lêflix</string>
    <string name="title_activity_cadastro">Crie sua conta - Lêflix</string>
    <string name="title_activity_login">Entre na sua conta - Lêflix</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Nome Usuário</string>
    <string name="nav_header_subtitle">email.usuario@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_grupos">Grupos</string>
    <string name="menu_em_alta">Em Alta</string>
    <string name="menu_historico">Histórico</string>
    <string name="menu_pefil">Meu Perfil</string>
    <string name="menu_sair">Sair</string>
    <string name="title_activity_grupos">GruposActivity</string>
    <string name="search_book">Digite o título do livro</string>
    <string name="search">Pesquisar</string>

    <string name="sucessoRecuperarSenha">Um email com as instruções de recuperar senha foi enviado para o endereço informado!</string>
    <string name="erroRecuperarSenha">Email informado não foi encontrado em nosso sistema!</string>

    <string name="meu_perfil_titulo_tela">Meu Perfil</string>
</resources>
