<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_inicio_preto"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_grupos"
            android:icon="@drawable/ic_grupos_preto"
            android:title="@string/menu_grupos" />
        <item
            android:id="@+id/nav_em_alta"
            android:icon="@drawable/ic_em_alta_preto"
            android:title="@string/menu_em_alta" />
        <item
            android:id="@+id/nav_historico"
            android:icon="@drawable/ic_historico_preto"
            android:title="@string/menu_historico" />
    </group>

    <item android:title="Conta">
        <menu>
            <item
                android:id="@+id/nav_meu_perfil"
                android:icon="@drawable/ic_meu_perfil_preto"
                android:title="@string/menu_pefil" />
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_sair_preto"
                android:title="@string/menu_sair" />
        </menu>
    </item>

</menu>
