<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    tools:context=".view.RegisterActivity">


    <EditText
        android:id="@+id/logemail2"
        android:layout_width="300dp"


        android:layout_height="55dp"
        android:layout_marginTop="176dp"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:drawingCacheQuality="high"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="#fff"
        android:textColorHint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/logsenha2"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="37dp"
        android:height="20dp"
        android:drawableLeft="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/logemail2"
        app:layout_constraintTop_toBottomOf="@+id/logemail2" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0.25"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logsenha2"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />


</android.support.constraint.ConstraintLayout>